package com.srm.dto;

import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@NoArgsConstructor
public class ReinoDTO {
    private Long id;
    private String nome;
    private String descricao;
} 